--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -31,7 +31,7 @@ jobs:
         # Artifact name
         name: # optional, default is artifact
         # A file, directory or wildcard pattern that describes what to upload
-        path: pub/*
+        path: sample-aspnet/bin/Release/netcoreapp3.1/*
         # The desired behavior if no files are found using the provided path.
         # Duration after which artifact will expire in days. 0 means using default retention
         retention-days: 30 
